# grpc-bridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Directory.Packages.props  README.md  grpc-bridge.sln  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yaml
crates/samples/cng/: Cargo.toml  README.md
crates/samples/cng/src/: main.rs  test.rs  util.rs
docs/: Development.md
docs/background/: tonic-rest.md
examples/: CMakeLists.txt
examples/helloworld/: CMakeLists.txt  greeter_client.cc  greeter_server.cc
examples/interceptors/: CMakeLists.txt  caching_interceptor.h  client.cc  server.cc
flatbuffers-test/: Cargo.toml  build.rs  greeter.fbs
flatbuffers-test/cpp/: CMakeLists.txt  client.cpp  server.cpp
flatbuffers-test/src/: generated.rs  lib.rs
src/: README.md
src/greeter_client/: Program.cs  greeter_client.csproj
src/greeter_server/: Program.cs  appsettings.json  greeter_server.csproj
src/greeter_server/Properties/: launchSettings.json
src/greeter_server/Services/: GreeterService.cs
src/proto/: Class1.cs  proto.csproj
src/unit_tests/: GrpcClient.cs  GrpcServer.cs  HeaderAuthentication.cs  ProxyServer.cs  Tests.cs  unit_tests.csproj
tonic-rest-test/: Cargo.toml  build.rs
tonic-rest-test/proto/: greeter.proto
tonic-rest-test/proto/google/api/: annotations.proto  http.proto
tonic-rest-test/src/: lib.rs
