[workspace]
resolver = "2"
members = [
  "crates/samples/*"
]

[workspace.dependencies]
rustls-cng = "0.6"
rustls = { version = "0.23", default-features = false, features = ["std"]}
tokio-rustls = { version = "0.26", default-features = false}
tokio = { version = "1", features = ["full"] }
bytes = "1"
rustls-symcrypt = "0.2"
tokio-util = "0.7"
# libs in this repo
yarrp = { git = "https://github.com/youyuanwu/yarrp.git", rev = "a693add3a77d2e43dcbc508202eb2a26601f232b" }
yarrp-rustls = { git = "https://github.com/youyuanwu/yarrp.git", rev = "a693add3a77d2e43dcbc508202eb2a26601f232b" }
[patch.crates-io]
# cng uses this dep without version so we use it same for it to compile
# rustls = { git = "https://github.com/rustls/rustls.git" } # same as cng
